# src/main/java/toby/ai/tobyremider/dto/ReminderRequest.java
@@ -1,0 +1,7 @@
+package toby.ai.tobyremider.dto;
+
+public record ReminderRequest(
+        String title,
+        String memo
+) {
+}
